_support/20260117-105313/repo/command-center/svc-suite-command-center-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: suite-command-center-ui
  namespace: suite
  labels:
    app: suite-command-center-ui
spec:
  selector:
    app: suite-command-center-ui
  ports:
    - name: http
      port: 80
      targetPort: 3000
